fix line wrapping on the search form suggestions box

--- a/css/ucsc.css
+++ b/css/ucsc.css
@@ -641,3 +641,29 @@ prm-icon[icon-definition="emoticon-cool"] {
 button.md-button[aria-label="Renew all from this campus"] {
   white-space: normal;
 }
+
+/* Fix line wrapping for search auto-complete suggestions and scope selection on small screens */
+ul.md-autocomplete-suggestions md-autocomplete-parent-scope > div {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul.md-autocomplete-suggestions li {
+  font-size: 1.15em;
+  height: auto;
+  line-height: 1.2em;
+  display: inline-block;
+  margin: .4em 0;
+}
+
+/* Make the magnifying glass icon stick with the scope name on line wrap */
+ul.md-autocomplete-suggestions li prm-icon {
+  display: none;
+}
+
+ul.md-autocomplete-suggestions li span.suggestion-scope:before {
+  content: url("data:image/svg+xml,%3Csvg id='magnifying-glass_cache-ucsc' width='16px' height='16px' viewBox='0 0 24 24' y='264' style='transform:scale(-1,1)' xmlns='http://www.w3.org/2000/svg' fit='' preserveAspectRatio='xMidYMid meet' focusable='false'%3E%3Cpath d='M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z'%3E%3C/path%3E%3C/svg%3E");
+  margin-right: .2em;
+  position: relative;
+  top: 2px;
+}
